--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -18,7 +18,12 @@ jobs:
       with:
         java-version: 11
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      run: mvn -B package
+    - name: Upload target for next job
+      uses: actions/upload-artifact@v1
+      with:
+        name: target
+        path: target
 
   deploy_to_heroku:
     name: Deploy to Heroku
@@ -26,6 +31,10 @@ jobs:
     needs: [build]
     steps:
     - uses: actions/checkout@v2
+    - name: Download target from previous job
+      uses: actions/download-artifact@v1
+      with:
+        name: target
     - name: Build docker image
       env:
         HEROKU_APP: ${{ secrets.HEROKU_APP }}
