--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -2,7 +2,7 @@ name: Cron CI
 
 on:
   schedule:
-    - cron:  '*/15 * * * *'
+    - cron:  '*/5 * * * *'
 
 jobs:
   load_tests:
@@ -16,6 +16,6 @@ jobs:
         python-version: '3.x'
         architecture: 'x64'
     - name: Install Locust
-      run: python3 -m pip install locustio
+      run: python3 -m pip install locust
     - name: Run Load tests
-      run: locust --no-web -c 30 -r 1 --run-time 60s --print-stats -f loadtests/locustfile.py --host=https://quarkus-github-flow.herokuapp.com
+      run: locust --no-web -c 30 -r 5 --run-time 120s --print-stats -f loadtests/locustfile.py --host=https://quarkus-github-flow.herokuapp.com
