--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -2,9 +2,23 @@ name: Cron CI
 
 on:
   schedule:
-    - cron:  '*/30 * * * *'
+    - cron:  '0 0 * * *'
 
 jobs:
+  quality_analysis:
+    name: Sonar code analysis
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up JDK 11
+      uses: actions/setup-java@v1
+      with:
+        java-version: 11
+    - name: Verify Sonar with maven
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: mvn verify sonar:sonar
+
   load_tests:
     name: Run load tests
     runs-on: ubuntu-latest
