Seting up postgres datasource

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,10 @@
-# Configuration file
-# key = value
+# set DB - only mandatory part
+quarkus.datasource.url=jdbc:postgresql://192.168.99.111:5432/db
+quarkus.datasource.driver=org.postgresql.Driver
+quarkus.datasource.username=user
+quarkus.datasource.password=pass
+
+# Hibernate details
+quarkus.hibernate-orm.log.sql=true
+quarkus.hibernate-orm.database.generation=drop-and-create
+quarkus.hibernate-orm.sql-load-script=import-developers.sql
