Using h2 locally, postgres in Heroku

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,6 @@
 # set DB - only mandatory part
-quarkus.datasource.url=jdbc:postgresql://192.168.99.111:5432/db
-quarkus.datasource.driver=org.postgresql.Driver
-quarkus.datasource.username=user
-quarkus.datasource.password=pass
+quarkus.datasource.url=jdbc:h2:tcp://localhost/mem:test
+quarkus.datasource.driver=org.h2.Driver
 
 # Hibernate details
 quarkus.hibernate-orm.log.sql=true
