--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,10 @@
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-jdbc-postgresql</artifactId>
     </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-jdbc-h2</artifactId>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
