--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,12 @@
+quarkus.http.port=${PORT:8080}
+
 # set DB - only mandatory part
-quarkus.datasource.url=jdbc:h2:tcp://localhost/mem:test
-quarkus.datasource.driver=org.h2.Driver
+quarkus.datasource.driver=org.postgresql.Driver
+quarkus.datasource.url=${JDBC_DATABASE_URL:jdbc:postgresql://localhost/db}
+quarkus.datasource.username=${JDBC_DATABASE_USERNAME:user}
+quarkus.datasource.password=${JDBC_DATABASE_PASSWORD:pass}
+%test.quarkus.datasource.url=jdbc:h2:tcp://localhost/mem:test
+%test.quarkus.datasource.driver=org.h2.Driver
 
 # Hibernate details
 quarkus.hibernate-orm.log.sql=true
