--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,13 +2,19 @@ quarkus.http.port=${PORT:8080}
 
 # set DB - only mandatory part
 quarkus.datasource.driver=org.postgresql.Driver
-quarkus.datasource.url=${JDBC_DATABASE_URL:jdbc:postgresql://localhost/db}
+quarkus.datasource.url=${JDBC_DATABASE_URL:jdbc:postgresql://192.168.99.111:5432/db}
 quarkus.datasource.username=${JDBC_DATABASE_USERNAME:user}
 quarkus.datasource.password=${JDBC_DATABASE_PASSWORD:pass}
+
+# Only for tests
 %test.quarkus.datasource.url=jdbc:h2:tcp://localhost/mem:test
 %test.quarkus.datasource.driver=org.h2.Driver
+%test.quarkus.hibernate-orm.database.generation=drop-and-create
+%test.quarkus.hibernate-orm.sql-load-script=import-developers.sql
 
 # Hibernate details
-quarkus.hibernate-orm.log.sql=true
-quarkus.hibernate-orm.database.generation=drop-and-create
-quarkus.hibernate-orm.sql-load-script=import-developers.sql
+%dev.quarkus.hibernate-orm.log.sql=true
+
+# Execute flyway on startup
+quarkus.flyway.migrate-at-start=true
+quarkus.flyway.schemas=public
